# Xslam

./: .build_ros.sh.swn  .build_ros.sh.swo  2.txt  3.txt  4.txt  6.txt  CMakeLists.txt  CameraTrajectory_modified.txt  CameraTrajectory（复件）.txt  LN.py  build_ros.sh  danmu  desc_mat_level0.txt  desc_mat_level1.txt  descriptors_sum_init.txt  descriptors_sum_init2.txt  ground_truth.txt  keypoints_level0.txt  keypoints_level1.txt  keypoints_sum.txt  mDesc2.txt  mkpts.txt  pt.txt  valid_keypoints2.txt
Examples_old/Monocular/: mono_euroc_old  mono_kitti_old  mono_tum_old  mono_tum_vi_old
Examples_old/Monocular-Inertial/: mono_inertial_euroc_old  mono_inertial_tum_vi_old
Examples_old/RGB-D/: rgbd_tum_old
Examples_old/ROS/ORB_SLAM3/: CMakeLists.txt  Mono  MonoAR  Mono_Inertial  RGBD  Stereo  Stereo_Inertial
Examples_old/ROS/ORB_SLAM3/src/: ros_mono.cc
Examples_old/ROS/ORB_SLAM3/src/AR/: ViewerAR.cc  ros_mono_ar.cc
Examples_old/Stereo/: stereo_euroc_old  stereo_kitti_old  stereo_tum_vi_old
Examples_old/Stereo-Inertial/: stereo_inertial_euroc_old  stereo_inertial_tum_vi_old
ceshi/include/: XFeat.h  XFextractor.h
ceshi/src/: Frame.cc  LocalMapping.cc  LoopClosing.cc  ORBmatcher.cc  Tracking.cc  XFeat.cc  XFextractor.cc
endopoint-SLAM-main/: README.md  model.py
examples/Monocular/: TUM1.yaml
include/: XFextractor.h
src/: ORBmatcher.cc  Tracking.cc  XFextractor.cc
修改/: XFeat.cc  XFeat.h
